# FluidLiter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  Wasm_Makefile  clean_then_test.sh  copyright.txt  example_tests.sh  fluidlite-config.cmake.in  gen_cwrap.py  gen_cwrap2.py  test_combination.sh  test_example.sh  ubuntu_init.sh  visualizer.html  visualizer2.html  wasm_test.html
.github/workflows/: c-cpp.yml  windows-ci.yml
example/: binary_to_c_array.py  diff.py  find_min_max.py  song8.pcm  song8_no_reverb_no_chorus.pcm
example/sf_/: GMGSx_1.sf2  README.md
example/src/: GMGSx_1.c  GMGSx_1.h  fluid_wasm.c  fluidsynth_sfload_mem.c  instruments.c  main.c  misc.c  misc.h  mono.c  sfload_mem.c  sfont_load_test.c  test2.c  test3.c  test4.c  test5.c  test_10ms.c  test_441.c  test_48000.c  test_7th_order.c  test_conv.c  test_effects.c  test_fpe.c  test_fpe2.c  test_instruments.c  test_macro.c  test_mem.c  test_mono.c  test_multi_sfont.c  test_reverb_chorus.c  test_sample_extract.c  test_sfont_compress.c  test_sfont_err.c  test_song.c  test_tuning.c  test_u8.c  test_vel.c  test_vel2.c  utils.c
include/: fluidlite.h  fluidliter.h
include/fluidlite/: gen.h  log.h  mod.h  music.h  sfont.h  synth.h  types.h  voice.h
include/fluidliter/: gen.h  log.h  music.h  sfont.h  synth.h  types.h  voice.h
src/: fluid_chan.c  fluid_chan.h  fluid_chorus.c  fluid_chorus.h  fluid_config.cmake  fluid_conv.c  fluid_conv.h  fluid_defsfont.c  fluid_defsfont.h  fluid_dsp_float.c  fluid_gen.c  fluid_gen.h  fluid_hash.c  fluid_hash.h  fluid_list.c  fluid_list.h  fluid_log.c  fluid_midi.h  fluid_mod.c  fluid_mod.h  fluid_phase.h  fluid_rev.c  fluid_rev.h  fluid_settings.c  fluid_settings.h  fluid_sfont.c  fluid_sfont.h  fluid_synth.c  fluid_synth.h  fluid_sys.c  fluid_sys.h  fluid_tuning.c  fluid_tuning.h  fluid_voice.c  fluid_voice.h  fluidsynth_priv.h  memory_pool.c  memory_pool.h  misc.c  misc.h
